# ProjectHSI-Bot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxygen.cmake  DoxygenConfig.cmake  README.md  vc140.idb
.github/workflows/: cmake-multi-platform.yml  doxygen.yml
ProjectHSI-Bot/: ApplicationContext.cpp  ApplicationContext.hpp  CMakeLists.txt  Logger.cpp  Logger.hpp  ProjectHSI-Bot.cpp  ProjectHSI-Bot.h  Version.hpp
ProjectHSI-Bot-Docs/: Doxyfile  Doxygen.cmake  DoxygenConfig.cmake
ProjectHSI-Bot-Docs/Markdown/: index.md
ProjectHSI-Bot-Interface-Default-SDL-GUI/: CMakeLists.txt  ProjectHSI-Bot-Interface-Default-SDL-GUI.cpp
ProjectHSI-Bot-O-GUI/: CMakeLists.txt
ProjectHSI-Bot-Shared/: CMakeLists.txt  Doxyfile  ProjectHSI-Bot-Shared-Interface-Types.h  ProjectHSI-Bot-Shared-Interface.h  ProjectHSI-Bot-Shared-Types.h  ProjectHSI-Bot-Shared.h  SO.h
ProjectHSI-Bot/Module/: ABICheck.cpp  ABICheck.hpp  BasicABIFunctions.cpp  BasicABIFunctions.hpp  SharedLibraryManagement.cpp  SharedLibraryManagement.hpp
ProjectHSI-Bot/Module/Interface/: SharedLibraryManagement.cpp  SharedLibraryManagement.hpp
Storage/: HTTP.cpp  HTTP.hpp  Socket.cpp  Socket.hpp
Storage/ProjectHSI-Bot-Shared-Tests/: CMakeLists.txt
Storage/ProjectHSI-Bot-Shared-Tests/Tests/CCompatibility/: CMakeLists.txt
